--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
 
-    </head>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Asad Web | </title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+</head>
+<body>
+    <h1>Hello World</h1>
+</body>
