--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+    
+    </header>
 </body>
