--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 </head>
 <body>
     <header>
-    
+        <h1>Metaverse</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">What's</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 </body>
