--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asad Web | </title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <header>
@@ -21,6 +20,8 @@
                 <li>
                     <a href="#">What's</a>
                 </li>
+                <li>
+                    <a href="#">Thr Big Company</a>
             </ul>
         </nav>
     </header>
