--- a/pengertian.html
+++ b/pengertian.html
@@ -97,7 +97,7 @@
             <a href="https://instagram.com/asad_.din" class="logo" target="_blank">
                 <img src="https://img.icons8.com/material-outlined/48/ffffff/instagram-new--v1.png" />
             </a>
-            <a href="https://wa.me/+6281384725731" class="logo" target="_blank">
+            <a href="https://web.whatsapp.com/" class="logo" target="_blank">
                 <img src="https://img.icons8.com/material-outlined/48/ffffff/whatsapp--v1.png" />
             </a>
             <a href="https://github.com/M-Asaduddin" class="logo">
